# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-09-02 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed some UTF encoding problems in FDb, Filmweb, Onet and WP movie plugins

2006-08-28 Piotr Ozarowski <ozarow@gmail.com>
	* Some GUI changes mainly suggested by Alan Horkan:
	  + menu reorganized
	  + poster button now opens poster window
	  + changed some icons to their stock equivalent

2006-08-27 Piotr Ozarowski <ozarow@gmail.com>
	* Added new green style to "html tables" template (HTML export plugin)
	  + old one renamed to "light green"
	* Added some highlights for next version to NEWS file

2006-08-25 Piotr Ozarowski <ozarow@gmail.com>
	* Movie plugins are now fetching only selected data.

2006-08-24 Piotr Ozarowski <ozarow@gmail.com>
	* Language treeview now supports codec/channel/subtitle format data (still needs work)

2006-08-23 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed problem with converting images on Windows (HTML export plugin)
	* Fixed bug with "You have to fill language..." after updating language list

2006-08-18 Piotr Ozarowski <ozarow@gmail.com>
	* Added green style to "html tables" template (HTML export plugin)

2006-08-15 Vasco Nunes <vasco.m.nunes@gmail.com>
	* tempdir for posters is now writable by all users under win32 systems

2006-08-15 Piotr Ozarowski <ozarow@gmail.com>
	* Merged changes from 0.6.2

2006-07-30 Piotr Ozarowski <ozarow@gmail.com>
	* Selecting next/previous movie is now possible (new toolbar buttons)

2006-07-29 Piotr Ozarowski <ozarow@gmail.com>
	* IMDb movie plugin adds new lines in "with" field again
	* Draggable toolbar

2006-05-02 Piotr Ozarowski <ozarow@gmail.com>
	* Added MySQL support
	* Server can be changed on the fly (see database tab in preferences)

2006-04-28 Piotr Ozarowski <ozarow@gmail.com>
	* SQLAlchemy transition started

2006-04-26 Piotr Ozarowski <ozarow@gmail.com>
	* Added database settings to preferences window

2006-04-25 Piotr Ozarowski <ozarow@gmail.com>